--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="flex items-center justify-center mb-6">
             <input type="checkbox" id="confirmation-checkbox" class="h-5 w-5 rounded-md text-blue-600 focus:ring-blue-500 border-gray-300">
-            <label for="confirmation-checkbox" class="text-sm text-gray-700 ml-2 select-none">I have read and agree to the terms.</label>
+            <label for="confirmation-checkbox" class="text-sm text-gray-700 ml-2 select-none">I have read the license and readme.</label>
         </div>
 
         <button id="continue-button" class="w-full bg-green-500 text-white font-medium py-3 rounded-lg hover:bg-green-600 transition-colors duration-200 disabled:bg-gray-400 disabled:cursor-not-allowed" disabled>
