--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
 
     <div class="flex flex-col items-center space-y-8 max-w-lg w-full">
 
-        <img src="https://cdn.discordapp.com/icons/1378223432503656529/37f4d2b7bf7f5690a29e386d823f6332.png?size=1024" 
+        <img src="https://cdn.discordapp.com/icons/1378223432503656529/2ed35229e392ed055503df2dd73e59b1.webp?size=1024" 
              alt="Discord Logo" 
              class="w-32 h-32 md:w-48 md:h-48 rounded-full shadow-lg fade-in-1">
 
